--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                         <label for="statusFilter">ステータス:</label>
                         <select id="statusFilter">
                             <option value="all">すべて</option>
+                            <option value="Not started">未対応</option>
                             <option value="pending">発送待ち</option>
                             <option value="shipped">発送済み</option>
                             <option value="delivered">配送完了</option>
