--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <!-- 発送一覧 -->
             <section class="shipping-list-section">
-                <h2>発送管理一覧</h2>
+                <h2>発送管理表</h2>
                 
                 <div class="filter-controls">
                     <div class="search-box">
@@ -58,7 +58,7 @@
                         <label for="statusFilter">ステータス:</label>
                         <select id="statusFilter">
                             <option value="all">すべて</option>
-                            <option value="Not started">未対応</option>
+                            <option value="not started">未対応</option>
                             <option value="pending">発送待ち</option>
                             <option value="shipped">発送済み</option>
                             <option value="delivered">配送完了</option>
